<resources>
    <string name="app_name">EasyFit</string>
    <string name="button_send" />
    <string name="connexion_invitation"><b>Connexion à l\'application</b></string>
    <string name="email_input">Entre ici ton mail</string>
    <string name="password_input">Entre ici ton mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="navSearch">Recherche</string>
    <string name="navProfil">Profil</string>
    <string name="navSettings">Paramètres</string>
    <string name="navHome">Accueil</string>
    <string name="btn_create_account">Créez un compte</string>
    <string name="btn_connect">Connectez-vous!</string>
    <string name="sports">sports</string>
    <string name="inscription"><b>Inscription</b></string>
    <string name="surname_input">Entre ici ton nom de famille</string>
    <string name="name_input">Entre ici ton prénom</string>
    <string name="pas_de_compte">Pas de compte ?</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="se_connecter">Se connecter ?</string>
    <string name="modifier_mon_mot_de_passe">Modifier mon mot de passe</string>
    <string name="continuer">Continuer</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="create_profile">create_profile</string>
    <string name="Username">Nom de l\'utilisateur</string>
    <string name="enter_your_name">Entrez votre nom</string>
    <string name="Usersurname">Nom de l\'utilisateur</string>
    <string name="enter_your_surname">enter_your_surname</string>
    <string name="phone_number">phone_number</string>
    <string name="enter_your_phone_number">enter_your_phone_number</string>
    <string name="e_mail">e_mail</string>
    <string name="email_address">email_address</string>
    <string name="ok">ok</string>
    <string name="enter_your_height">Enter votre Taille</string>
    <string name="UserHeight">Votre taille</string>
    <string name="UserWeight">Votre poids</string>
    <string name="enter_your_weight">Entrez votre poids</string>
    <string name="enter_your_sex">Entrez votre sexe</string>
    <string name="UserSex">Votre Sexe</string>
    <string name="enter_your_birth">Entrez votre date de naissance</string>
    <string name="UserBirth">Votre date de naissance</string>
    <string name="UserCountry">Votre pays</string>
    <string name="enter_your_country">Entrez votre pays</string>
    <string name="profile">Profil</string>
    <string name="log_out">Déconnexion</string>
    <string name="name">Name</string>
    <string name="MapApiKey" />
    <string name="Modifier">Modifier mon profil</string>
    <string name="Partager">Partager</string>
    <string name="Problème">Signaler un problème</string>
    <string name="contact">Nous contacter</string>
    <string name="Deconnexion">Déconnexion</string>
    <string name="lastsign">Dernière connexion</string>
    <string name="easyfit_mail_com">easyfit@mail.com</string>
    <string name="notez_notre_application">Notez notre application</string>
</resources>
