<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="192dp"
        android:layout_width="match_parent">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/update_imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/rounded_fg"
                android:gravity="center_vertical"
                android:src="@drawable/defavatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></ImageView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent" >

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Mon profil"
                android:textColor="#050371"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:id="@+id/TextViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Username"
                android:textColor="#0A21B5"/>
            <EditText
                android:id="@+id/EditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:hint="@string/enter_your_name"/>
            <TextView
                android:id="@+id/TextViewHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/UserHeight"
                android:textColor="#0A21B5"/>

            <EditText
                android:id="@+id/EditTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:hint="@string/enter_your_height"/>
            <TextView
                android:id="@+id/TextViewWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/UserWeight"
                android:textColor="#0A21B5"/>

            <EditText
                android:id="@+id/EditTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:hint="@string/enter_your_weight"/>

            <TextView
                android:id="@+id/TextViewSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/UserSex"
                android:textColor="#0A21B5"/>

            <EditText
                android:id="@+id/EditTextSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:hint="@string/enter_your_sex"/>

            <TextView
                android:id="@+id/TextViewBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/UserBirth"
                android:textColor="#0A21B5"/>

            <EditText
                android:id="@+id/EditTextBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:hint="@string/enter_your_birth"/>

            <TextView
                android:id="@+id/TextViewCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/UserCountry"
                android:textColor="#0A21B5"/>

            <EditText
                android:id="@+id/EditTextCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                android:hint="@string/enter_your_country"/>

           <!-- <TextView
                android:id="@+id/TextViewPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/purple_500"/>
            <EditText
                android:id="@+id/EditTextPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_phone_number"
                android:inputType="number"/>-->

            <TextView
                android:id="@+id/TextViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                android:textColor="#0A21B5"/>
            <TextView
                android:id="@+id/textViewEmailAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/email_address"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:id="@+id/btnSaveButton"
                android:layout_marginTop="10dp"
                android:backgroundTint="#C6FF5722"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>