<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".startActivity">

    <ImageView
        android:id="@+id/imageHome"
        android:layout_width="match_parent"
        android:layout_height="405dp"
        android:contentDescription="@string/sports"
        tools:ignore="ImageContrastCheck"
        android:src="@drawable/imagehome" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/SignInButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"/>
    <Button
        android:id="@+id/buttonConnect"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_connect"
        android:layout_marginHorizontal="100dp"/>

    <Button
        android:id="@+id/buttonCreateAccount"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/black"
        app:strokeWidth="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_account"
        android:layout_marginHorizontal="100dp"/>

</LinearLayout>